# synapse

./: .gitignore  AGENT.md  GEMINI.md  LICENSE  README.md  analysis_options.yaml  justfile  pubspec.yaml  serve_web.py  test_browser.js
.github/workflows/: ci.yml
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/track_1_bootstrap/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/track_2_server/: index.md  metadata.json  plan.md  spec.md
integration_test/: simple_test.dart
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/src/: bevy_viewport.dart  platform_socket.dart  platform_socket_io.dart  platform_socket_stub.dart  platform_socket_web.dart
lib/state/: editor_state.dart  editor_state.g.dart  viewport_state.dart  viewport_state.g.dart
linux/flutter/: generated_plugins.cmake
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: bevy_app.rs  frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_synapse.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_synapse.podspec
rust_builder/windows/: CMakeLists.txt
test/: test_client.dart  widget_test.dart
web/pkg/: rust_lib_synapse.js  rust_lib_synapse_bg.wasm
windows/flutter/: generated_plugins.cmake
(+14 files in other folders)
