[package]
name = "rust_lib_synapse"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
bevy = { version = "0.14", default-features = false, features = ["bevy_render", "bevy_gltf"] }
transform-gizmo-bevy = "0.3.0"
bevy_panorbit_camera = "0.20.0"
bevy_mod_billboard = "0.7.0"
